# flux-index-node

./: .env  .gitignore  DBEventHandler.js  Dockerfile  README.md  config.js  docker-compose.yml  index.js  init.sql  init_old.sql  package-lock.json  package.json
api/: chartData.js  earnings.js  historicData.js  market.js  markets.js  orderbook.js  user.js
api/tests/earnings/: getTrading.sh
api/tests/history/: getAvgPricePerDateMetric.sh
api/tests/market/: getAvgPriceForDate.sh  getBestPrices.sh  getLastFilledPrices.sh  getMarket.sh  getMarketPrices.sh  getOpenOrdersForUser.sh  getShareBalanceForUser.sh
api/tests/markets/: getBestPrices.sh  getLastFilledPrices.sh  getMarkets.sh  getResoluting.sh  getResolutionState.sh
api/tests/orderbooks/: getOrderbook.sh  getOrderbookBest.sh
indexer/: Cargo.toml  Dockerfile
indexer/scripts/: cancelOrder.sh  claimAffiliateEarnings.sh  claimEarnings.sh  createAccount.sh  createMarket.sh  deployContract.sh  deployFunTokenContract.sh  deployProtocolContract.sh  disputeMarket.sh  disputeTest.sh  dynamicMarketSell.sh  finalizeMarket.sh  finalizeTest.sh  getBalance.sh  init.sh  initFunToken.sh  placeAndCancelOrder.sh  placeOrder.sh  placeOrderAffiliate.sh  redeployContract.sh  resoluteMarket.sh  selfFillingBinaryOrder.sh  selfFillingCategoricalOrder.sh  selfFillingOrder.sh  setAllowance.sh  testClaimable.sh
indexer/src/: configs.rs  db.rs  db_utils.rs  filter.rs  main.rs  utils.rs
indexer/src/db/: schema.rs  structs.rs
indexer/src/utils/: db_utils.rs
indexer/src/utils/db_utils/: markets.rs  schema.rs
indexer/wasm/: flux_protocol.wasm
rpc/: config.js  nearClient.js  responseHandlers.js
scripts/: test-node-server.sh
(+4 files in other folders)
