[package]
name = "indexer-example"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "0.9"
clap = "3.0.0-beta.1"
openssl-probe = { version = "0.1.2" }
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["sync"] }
tracing-subscriber = "0.2.4"
tokio-diesel = "0.3.0"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "numeric", "serde_json"] }
bigdecimal = "0.1.2"
chrono = "0.4.13"

near-indexer = { git = "https://github.com/nearprotocol/nearcore.git" }
